tool-output/cppcheck/aide.txt
Checking src\aide.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\aide.c: CONFIG_FILE...
Checking src\aide.c: DEFAULT_DB...
Checking src\aide.c: DEFAULT_DB_OUT...
Checking src\aide.c: HAVE_UNISTD_H...
Checking src\aide.c: WITH_ACL...
Checking src\aide.c: WITH_CAPABILITIES...
Checking src\aide.c: WITH_E2FSATTRS...
Checking src\aide.c: WITH_GCRYPT...
Checking src\aide.c: WITH_LOCALE...
Checking src\aide.c: WITH_MHASH...
Checking src\aide.c: WITH_SELINUX...
1/34 files checked 7% done
Checking src\attributes.c ...
Defines:
Undefines:
Includes:
Platform:native
2/34 files checked 8% done
Checking src\base64.c ...
Defines:
Undefines:
Includes:
Platform:native
3/34 files checked 10% done
Checking src\be.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\be.c: HAVE_FCNTL...
Checking src\be.c: WITH_CURL...
Checking src\be.c: WITH_ZLIB...
4/34 files checked 12% done
Checking src\commandconf.c ...
Defines:
Undefines:
Includes:
Platform:native
src\commandconf.c:445:15: error: There is an unknown macro here somewhere. Configuration is required. If LOG_CONFIG_FORMAT_LINE is a macro then please configure it. [unknownMacro]
              LOG_CONFIG_FORMAT_LINE(LOG_LEVEL_ERROR, "'%s': unsupported URL-type: '%s'", db_option_name, get_url_type_string(u->type))
              ^
Checking src\commandconf.c: HAVE_SYSLOG...
Checking src\commandconf.c: WITH_CURL...
Checking src\commandconf.c: WITH_E2FSATTRS...
Checking src\commandconf.c: WITH_ZLIB...
5/34 files checked 16% done
Checking src\conf_ast.c ...
Defines:
Undefines:
Includes:
Platform:native
6/34 files checked 19% done
Checking src\conf_eval.c ...
Defines:
Undefines:
Includes:
Platform:native
src\conf_eval.c:128:9: error: There is an unknown macro here somewhere. Configuration is required. If LOG_CONFIG_FORMAT_LINE is a macro then please configure it. [unknownMacro]
        LOG_CONFIG_FORMAT_LINE(LOG_LEVEL_ERROR, "unrecognized bool value: '%s' (expecting %s)", str, "'true', 'yes','false' or 'no'")
        ^
Checking src\conf_eval.c: WITH_ACL...
Checking src\conf_eval.c: WITH_E2FSATTRS...
Checking src\conf_eval.c: WITH_ZLIB...
7/34 files checked 27% done
Checking src\db.c ...
Defines:
Undefines:
Includes:
Platform:native
src\db.c:450:7: error: There is an unknown macro here somewhere. Configuration is required. If LOG_DB_FORMAT_LINE is a macro then please configure it. [unknownMacro]
      LOG_DB_FORMAT_LINE(LOG_LEVEL_WARNING, "could not read '%s' from database: strtoll failed for '%s' (base64 encoded value: '%s')", field_name, b, s)
      ^
Checking src\db.c: WITH_ACL...
Checking src\db.c: WITH_CURL...
Checking src\db.c: WITH_POSIX_ACL...
Checking src\db.c: WITH_XATTR...
Checking src\db.c: WITH_ZLIB...
8/34 files checked 31% done
Checking src\db_disk.c ...
Defines:
Undefines:
Includes:
Platform:native
9/34 files checked 34% done
Checking src\db_file.c ...
Defines:
Undefines:
Includes:
Platform:native
src\db_file.c:239:17: error: There is an unknown macro here somewhere. Configuration is required. If LOG_DB_FORMAT_LINE is a macro then please configure it. [unknownMacro]
                LOG_DB_FORMAT_LINE(LOG_LEVEL_DEBUG, "%s", "stop reading database")
                ^
Checking src\db_file.c: WITH_ACL...
Checking src\db_file.c: WITH_ACL;WITH_POSIX_ACL...
Checking src\db_file.c: WITH_CAPABILITIES...
Checking src\db_file.c: WITH_E2FSATTRS...
Checking src\db_file.c: WITH_XATTR...
Checking src\db_file.c: WITH_ZLIB...
Checking src\db_file.c: __GNUC__...
10/34 files checked 39% done
Checking src\db_list.c ...
Defines:
Undefines:
Includes:
Platform:native
11/34 files checked 39% done
Checking src\do_md.c ...
Defines:
Undefines:
Includes:
Platform:native
src\do_md.c:253:2: error: #error "READ_BLOCK_SIZE" is too large. Max value is SSIZE_MAX, and current is READ_BLOCK_SIZE [preprocessorErrorDirective]
#error "READ_BLOCK_SIZE" is too large. Max value is SSIZE_MAX, and current is READ_BLOCK_SIZE
 ^
12/34 files checked 44% done
Checking src\e2fsattrs.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\e2fsattrs.c: EXT2_NOCOMPR_FL...
Checking src\e2fsattrs.c: EXT4_CASEFOLD_FL...
Checking src\e2fsattrs.c: EXT4_EXTENTS_FL...
Checking src\e2fsattrs.c: EXT4_INLINE_DATA_FL...
Checking src\e2fsattrs.c: EXT4_PROJINHERIT_FL...
Checking src\e2fsattrs.c: EXT4_VERITY_FL...
Checking src\e2fsattrs.c: FS_DAX_FL...
Checking src\e2fsattrs.c: FS_NOCOW_FL...
13/34 files checked 44% done
Checking src\fopen.c ...
Defines:
Undefines:
Includes:
Platform:native
14/34 files checked 47% done
Checking src\gen_list.c ...
Defines:
Undefines:
Includes:
Platform:native
src\gen_list.c:390:7: error: There is an unknown macro here somewhere. Configuration is required. If LOG_DB_FORMAT_LINE is a macro then please configure it. [unknownMacro]
      LOG_DB_FORMAT_LINE(LOG_LEVEL_WARNING, "duplicate database entry found for '%s' (skip line)", file->filename)
      ^
Checking src\gen_list.c: WITH_ACL...
Checking src\gen_list.c: WITH_ACL;WITH_POSIX_ACL...
Checking src\gen_list.c: WITH_CAPABILITIES...
Checking src\gen_list.c: WITH_E2FSATTRS...
Checking src\gen_list.c: WITH_SELINUX...
Checking src\gen_list.c: WITH_XATTR...
15/34 files checked 56% done
Checking src\getopt.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\getopt.c: HAVE_LIBINTL_H...
Checking src\getopt.c: HAVE_STRING_H...
Checking src\getopt.c: TEST...
Checking src\getopt.c: VMS...
Checking src\getopt.c: _LIBC...
Checking src\getopt.c: _LIBC;__GLIBC__...
Checking src\getopt.c: _LIBC;text_set_element...
Checking src\getopt.c: __GNUC__...
Checking src\getopt.c: __GNUC__;__STDC__;__STDC__=0;strlen...
Checking src\getopt.c: __GNU_LIBRARY__...
Checking src\getopt.c: __STDC__...
16/34 files checked 64% done
Checking src\getopt1.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\getopt1.c: TEST...
Checking src\getopt1.c: _LIBC;__GLIBC__...
Checking src\getopt1.c: __GNU_LIBRARY__...
Checking src\getopt1.c: __STDC__;__STDC__=0...
17/34 files checked 65% done
Checking src\hashsum.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\hashsum.c: HAVE_MHASH_WHIRLPOOL;WITH_MHASH...
Checking src\hashsum.c: WITH_GCRYPT...
Checking src\hashsum.c: WITH_MHASH...
18/34 files checked 66% done
Checking src\list.c ...
Defines:
Undefines:
Includes:
Platform:native
19/34 files checked 67% done
Checking src\log.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\log.c: __GNUC__...
20/34 files checked 68% done
Checking src\md.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\md.c: WITH_GCRYPT...
Checking src\md.c: WITH_MHASH...
Checking src\md.c: _PARAMETER_CHECK_...
21/34 files checked 70% done
Checking src\progress.c ...
Defines:
Undefines:
Includes:
Platform:native
22/34 files checked 72% done
Checking src\queue.c ...
Defines:
Undefines:
Includes:
Platform:native
23/34 files checked 74% done
Checking src\report.c ...
Defines:
Undefines:
Includes:
Platform:native
src\report.c:432:9: error: There is an unknown macro here somewhere. Configuration is required. If LOG_CONFIG_FORMAT_LINE is a macro then please configure it. [unknownMacro]
        LOG_CONFIG_FORMAT_LINE(LOG_LEVEL_ERROR, "unsupported report URL-type: '%s'", get_url_type_string(url->type))
        ^
Checking src\report.c: HAVE_SYSLOG...
Checking src\report.c: HAVE_SYSLOG;HAVE_VSYSLOG...
Checking src\report.c: HAVE_SYSLOG;WITH_AUDIT...
Checking src\report.c: S_IFDOOR...
Checking src\report.c: S_IFIFO...
Checking src\report.c: S_IFPORT...
Checking src\report.c: S_IFSOCK...
Checking src\report.c: WITH_ACL...
Checking src\report.c: WITH_ACL;WITH_POSIX_ACL...
Checking src\report.c: WITH_AUDIT...
Checking src\report.c: WITH_CAPABILITIES...
24/34 files checked 82% done
Checking src\report_json.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\report_json.c: WITH_E2FSATTRS...
25/34 files checked 86% done
Checking src\report_plain.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\report_plain.c: WITH_E2FSATTRS...
26/34 files checked 88% done
Checking src\rx_rule.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\rx_rule.c: S_IFDOOR...
Checking src\rx_rule.c: S_IFIFO...
Checking src\rx_rule.c: S_IFPORT...
Checking src\rx_rule.c: S_IFSOCK...
27/34 files checked 89% done
Checking src\seltree.c ...
Defines:
Undefines:
Includes:
Platform:native
28/34 files checked 94% done
Checking src\symboltable.c ...
Defines:
Undefines:
Includes:
Platform:native
29/34 files checked 94% done
Checking src\tree.c ...
Defines:
Undefines:
Includes:
Platform:native
30/34 files checked 95% done
Checking src\url.c ...
Defines:
Undefines:
Includes:
Platform:native
31/34 files checked 95% done
Checking src\util.c ...
Defines:
Undefines:
Includes:
Platform:native
Checking src\util.c: HAVE_SYSLOG...
Checking src\util.c: HAVE_SYSLOG;LOG_AUTH...
Checking src\util.c: HAVE_SYSLOG;LOG_CRON...
Checking src\util.c: HAVE_SYSLOG;LOG_DAEMON...
Checking src\util.c: HAVE_SYSLOG;LOG_KERN...
Checking src\util.c: HAVE_SYSLOG;LOG_LOCAL0...
Checking src\util.c: HAVE_SYSLOG;LOG_LOCAL1...
Checking src\util.c: HAVE_SYSLOG;LOG_LOCAL2...
Checking src\util.c: HAVE_SYSLOG;LOG_LOCAL3...
Checking src\util.c: HAVE_SYSLOG;LOG_LOCAL4...
Checking src\util.c: HAVE_SYSLOG;LOG_LOCAL5...
32/34 files checked 98% done
Checking tests\check_aide.c ...
Defines:
Undefines:
Includes:
Platform:native
33/34 files checked 98% done
Checking tests\check_attributes.c ...
Defines:
Undefines:
Includes:
Platform:native
34/34 files checked 100% done
nofile:0:0: information: The checking of the file will be interrupted because there are too many #ifdef configurations. Checking of all #ifdef configurations can be forced by --force command line option or from GUI preferences. However that may increase the checking time. For more details, use --enable=information. [toomanyconfigs]

